Atmail Open Changelog
---------------------

For the complete version history please see our Trac timeline interface at:

http://dev.atmail.com/atmailopentrac/timeline

*** ATMAIL OPEN 1.04 - July 2010 ***

- added support for marking multiple selected emails as read/unread
- improved support for folder names with special chars (# for eg)
- improved mime parsing
- Added SQLite database option
- various other small improvements
- Added support for the following new languages: Chinese, Dutch, Russian, Japanese, Portuguese
- Added LDAP Address Book configuration to installer

*** AMAIL OPEN 1.03 - January 2009 ***

- Added FCKeditor for composing HTML emails
- Added better filtering of control characters in email headers that broke XML parser
- Added better handling of unquoted or badly formatted email addresses
- Fixed spellchecker (add path to aspell in Config.php's 'aspell_path' setting)
- Removed display of CSS garbage when switching from HTML to text composing
- added more plugin hooks
- added script to upgrade the database to Atmail commercial structure
- call to localtime() now uses correct arguments in GetMail.php
- added hostname argument when creating Net_SMTP object; avoids possible mail rejection
  due to use of default 'localhost' (thanks to bjornjohansen)

Thanks to firemail, spluffer and ikaney from forums.atmail.org for helping supply 
code for several bug fixes and new features as listed below.

- Quota display when mail server supports it and account has quota set
- Alert when over specific percentage of quota used
- Use IMAP sort extension rather than client side sort if server supports it
- Display LDAP addresses in Addressbook rather than Search->Import->Add
- Use LDAP addresses in auto complete
- Remove rogue save button on edit group page which made groups into users
- Firefox always display scrollbars (no shifts to the left on scrollable pages)
- When adding entries from LDAP server, use first and last name correctly
